# session-coherence

./: AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  chronicle-manager.py  install.sh  pyproject.toml  uninstall.sh
adapters/aider/: conventions.md
adapters/claude-code/: install.sh  session-briefing.py  session-coherence.md
adapters/cline/: instructions.md
adapters/codex/: AGENTS.md  install.sh
adapters/cursor/: cursorrules-snippet.md  install.sh
adapters/gemini/: GEMINI.md  install.sh
session_coherence/: __init__.py  cli.py
